@@ -1688,53 +1688,55 @@ var INTERMediator = {
                         calcFields.push(voteResult.fieldlist[i]);
                     }
                 }
-
-                try {
-                    relationValue = null;
-                    dependObject = [];
-                    relationDef = currentContext['relation'];
-                    if (relationDef) {
-                        relationValue = {};
-                        for (index in relationDef) {
-                            relationValue[ relationDef[index]['join-field'] ]
-                                = currentRecord[relationDef[index]['join-field']];
-                            if (relationDef[index]['portal'] == true) {
-                                currentContext['portal'] = true;
-                            }
-                            for (fieldName in parentObjectInfo) {
-                                if (fieldName == relationDef[index]['join-field']) {
-                                    dependObject.push(parentObjectInfo[fieldName]);
+                
+                if (!isInsidePostOnly) {
+                    try {
+                        relationValue = null;
+                        dependObject = [];
+                        relationDef = currentContext['relation'];
+                        if (relationDef) {
+                            relationValue = {};
+                            for (index in relationDef) {
+                                relationValue[ relationDef[index]['join-field'] ]
+                                    = currentRecord[relationDef[index]['join-field']];
+                                if (relationDef[index]['portal'] == true) {
+                                    currentContext['portal'] = true;
+                                }
+                                for (fieldName in parentObjectInfo) {
+                                    if (fieldName == relationDef[index]['join-field']) {
+                                        dependObject.push(parentObjectInfo[fieldName]);
+                                    }
                                 }
                             }
                         }
-                    }
-                    thisKeyFieldObject = {
-                        'node': node,
-                        'name': currentContext['name'] /*currentTable */,
-                        'foreign-value': relationValue,
-                        'parent': node.parentNode,
-                        'original': [],
-                        'target': dependObject
-                    };
-                    for (i = 0; i < repeatersOriginal.length; i++) {
-                        thisKeyFieldObject.original.push(repeatersOriginal[i].cloneNode(true));
-                    }
-                    INTERMediator.keyFieldObject.push(thisKeyFieldObject);
-
-                    // Access database and get records
-                    pagingValue = false;
-                    if (currentContext['paging']) {
-                        pagingValue = currentContext['paging'];
-                    }
-                    recordsValue = 10000000000;
-                    if (currentContext['records']) {
-                        recordsValue = currentContext['records'];
-                    }
-                } catch (ex) {
-                    if (ex == "_im_requath_request_") {
-                        throw ex;
-                    } else {
-                        INTERMediator.setErrorMessage(ex, "EXCEPTION-25");
+                        thisKeyFieldObject = {
+                            'node': node,
+                            'name': currentContext['name'] /*currentTable */,
+                            'foreign-value': relationValue,
+                            'parent': node.parentNode,
+                            'original': [],
+                            'target': dependObject
+                        };
+                        for (i = 0; i < repeatersOriginal.length; i++) {
+                            thisKeyFieldObject.original.push(repeatersOriginal[i].cloneNode(true));
+                        }
+                        INTERMediator.keyFieldObject.push(thisKeyFieldObject);
+    
+                        // Access database and get records
+                        pagingValue = false;
+                        if (currentContext['paging']) {
+                            pagingValue = currentContext['paging'];
+                        }
+                        recordsValue = 10000000000;
+                        if (currentContext['records']) {
+                            recordsValue = currentContext['records'];
+                        }
+                    } catch (ex) {
+                        if (ex == "_im_requath_request_") {
+                            throw ex;
+                        } else {
+                            INTERMediator.setErrorMessage(ex, "EXCEPTION-25");
+                        }
                     }
                 }
 
